# AlmaQuies

./: .gitignore  CMakeLists.txt  README.md
engine/: spatial_grid.cpp  spatial_grid.hpp
entities/: entities.json
shaders/: outline.glsl  vertex.glsl
src/: alma_quies.cpp  alma_quies.hpp  farm_and_conquer.cpp  farm_and_conquer.hpp  main.cpp
src/engine/: display.cpp  display.hpp  engine.cpp  engine.hpp  entity_factory.cpp  entity_factory.hpp  entity_loader.cpp  entity_loader.hpp  shader.cpp  shader.hpp  world.cpp  world.hpp
src/engine/components/: animation_component.hpp  camera_component.hpp  collider_component.hpp  input_state_component.hpp  name_component.hpp  outline_component.hpp  render_component.hpp  selected_tag.hpp  state_component.hpp  transform_component.hpp  velocity_component.hpp  visibility_compnent.hpp
src/engine/components/tags/: ai_controlled_tag.hpp  player_tag.hpp  selected_tag.hpp
src/engine/managers/: atlas_manager.cpp  atlas_manager.hpp  atlas_region.hpp  file_manager.cpp  file_manager.hpp  input_manager.cpp  input_manager.hpp  json_reader.cpp  json_reader.hpp  resource_manager.cpp  resource_manager.hpp
src/engine/map/: map.cpp  map.hpp  map_generator.cpp  map_generator.hpp  map_objects_generator.cpp  map_objects_generator.hpp  map_resources_generator.cpp  map_resources_generator.hpp  map_tiles_generator.cpp  map_tiles_generator.hpp  tile.hpp
src/engine/overlay/: window.cpp  window.hpp  window_factory.cpp  window_factory.hpp
src/engine/systems/: ai_controller_system.cpp  ai_controller_system.hpp  animation_system.cpp  animation_system.hpp  camera_system.cpp  camera_system.hpp  fps_system.cpp  fps_system.hpp  input_system.cpp  input_system.hpp  movement_system.cpp  movement_system.hpp  occlusion_system.cpp  occlusion_system.hpp  overlay_system.cpp  overlay_system.hpp  player_controller_system.cpp  player_controller_system.hpp  rendering_system.cpp  rendering_system.hpp  selection_system.cpp  selection_system.hpp  spatial_grid_system.cpp  spatial_grid_system.hpp  steering_system.cpp  steering_system.hpp  system.cpp  system.hpp
src/engine/systems/collision/: collision_checker.cpp  collision_checker.hpp  collision_resolver.cpp  collision_resolver.hpp  collision_system.cpp  collision_system.hpp  ray.hpp  spatial_grid.cpp  spatial_grid.hpp
src/engine/systems/events/: created_collidable_event.hpp  created_renderable_event.hpp  move_command_event.hpp  zoom_command_event.hpp
src/engine/systems/rendering/: bitmap_target.cpp  bitmap_target.hpp  display_target.cpp  display_target.hpp  map_renderer.cpp  map_renderer.hpp  occluded_entities_renderer.cpp  occluded_entities_renderer.hpp  outline_renderer.cpp  outline_renderer.hpp  render_target.hpp  renderer.cpp  renderer.hpp  rendering_system.cpp  rendering_system.hpp
src/engine/systems/rendering_system/: bitmap_target.hpp  display_target.hpp  render_target.hpp  renderer.cpp  renderer.hpp  rendering_system.cpp  rendering_system.hpp
src/engine/world/: map.cpp  map.hpp  world.cpp  world.hpp
src/util/: constants.cpp  constants.hpp  movement_util.cpp  movement_util.hpp  random.hpp  util.cpp  util.hpp  vec_2.hpp
